--- a/index.html
+++ b/index.html
@@ -74,11 +74,21 @@
                 <p class="desc">5 Star Ratings (2k+ Review)</p>
             </div>
             <div class="images">
-                <img src="./asset/img/client_1.svg" alt="">
-                <img src="./asset/img/client_2.svg" alt="">
-                <img src="./asset/img/client_3.svg" alt="">
-                <img src="./asset/img/client_4.svg" alt="">
-                <img src="./asset/img/client_5.svg" alt="">
+                <a href="">
+                    <img src="./asset/img/client_1.svg" alt="">
+                </a>
+                <a href="">
+                    <img src="./asset/img/client_2.svg" alt="">
+                </a>
+                <a href="">
+                    <img src="./asset/img/client_3.svg" alt="">
+                </a>
+                <a href="">
+                    <img src="./asset/img/client_4.svg" alt="">
+                </a>
+                <a href="">
+                    <img src="./asset/img/client_5.svg" alt="">
+                </a>
             </div>
         </div>
         <!-- Guides -->
