--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
     <link rel="stylesheet" href="./asset/css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./asset/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./asset/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./asset/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./asset/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./asset/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./asset/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./asset/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./asset/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./asset/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./asset/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./asset/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./asset/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./asset/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./asset/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./asset/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Font -->
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Poppins:wght@100&family=Roboto:wght@100;300;700&display=swap"
         rel="stylesheet">
@@ -21,114 +40,122 @@
 </head>
 
 <body>
-    <main style="height: 2000px;">
-        <!-- Header -->
-        <header class="header">
+    <!-- Header -->
+    <header class="fixed-header">
+        <div class="content">
+            <nav class="navbar">
+                <!-- Logo -->
+                <a href="/"><img src="./asset/img/Logo.svg" alt=""></a>
+                <!-- Navigation -->
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#resourses">Resourses</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <!-- Action -->
+                <div class="actions">
+                    <a href="#!" class="action-link">Sign in</a>
+                    <a href="#!" class="btn action-btn">Sign up</a>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main id="home">
+        <!-- Hero -->
+        <div class="hero-wrap">
             <div class="content">
-                <nav class="navbar">
+                <div class="info">
+                    <p class="sub-title">Welcome to Besnik Agency</p>
+                    <h1 class="title">Discover a place
+                        you'll love to live.</h1>
+                    <p class="desc">Get the best real estate deals first,
+                        before they hit the mass market! HOT FORECLOSURE DEALS with one simple search.</p>
+                    <a href="" class="btn hero-cta">More About Us</a>
+                </div>
+                <img src="./asset/img/hero-img.svg" alt="" class="hero-img">
+            </div>
+        </div>
+        <!-- Clients -->
+        <div class="clients">
+            <div class="content">
+                <div class="row">
                     <!-- Logo -->
                     <img src="./asset/img/Logo.svg" alt="">
-                    <!-- Navigation -->
-                    <ul>
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Features</a></li>
-                        <li><a href="#!">Services</a></li>
-                        <li><a href="#!">Resourses</a></li>
-                        <li><a href="#!">Contact</a></li>
-                    </ul>
-                    <!-- Action -->
-                    <div class="actions">
-                        <a href="#!" class="action-link">Sign in</a>
-                        <a href="#!" class="btn action-btn">Sign up</a>
+                    <!-- Stars -->
+                    <div class="stars">
+                        <img src="./asset/img/Vector.svg" alt="">
+                        <img src="./asset/img/Vector.svg" alt="">
+                        <img src="./asset/img/Vector.svg" alt="">
+                        <img src="./asset/img/Vector.svg" alt="">
+                        <img src="./asset/img/Vector.svg" alt="">
                     </div>
-                </nav>
-                <div class="hero">
-                    <div class="info">
-                        <p class="sub-title">Welcome to Besnik Agency</p>
-                        <h1 class="title">Discover a place
-                            you'll love to live.</h1>
-                        <p class="desc">Get the best real estate deals first,
-                            before they hit the mass market! HOT FORECLOSURE DEALS with one simple search.</p>
-                        <a href="" class="btn hero-cta">More About Us</a>
-                    </div>
-                    <img src="./asset/img/hero-img.svg" alt="" class="hero-img">
                 </div>
-            </div>
-        </header>
-        <!-- Clients -->
-        <div class="clients content">
-            <div class="row">
-                <!-- Logo -->
-                <img src="./asset/img/Logo.svg" alt="">
-                <!-- Stars -->
-                <div class="stars">
-                    <img src="./asset/img/Vector.svg" alt="">
-                    <img src="./asset/img/Vector.svg" alt="">
-                    <img src="./asset/img/Vector.svg" alt="">
-                    <img src="./asset/img/Vector.svg" alt="">
-                    <img src="./asset/img/Vector.svg" alt="">
+                <div class="row row-desc">
+                    <p class="desc">More than 45,000+ companies trust besnik</p>
+                    <p class="desc">5 Star Ratings (2k+ Review)</p>
                 </div>
-            </div>
-            <div class="row row-desc">
-                <p class="desc">More than 45,000+ companies trust besnik</p>
-                <p class="desc">5 Star Ratings (2k+ Review)</p>
-            </div>
-            <div class="images">
-                <a href="">
-                    <img src="./asset/img/client_1.svg" alt="">
-                </a>
-                <a href="">
-                    <img src="./asset/img/client_2.svg" alt="">
-                </a>
-                <a href="">
-                    <img src="./asset/img/client_3.svg" alt="">
-                </a>
-                <a href="">
-                    <img src="./asset/img/client_4.svg" alt="">
-                </a>
-                <a href="">
-                    <img src="./asset/img/client_5.svg" alt="">
-                </a>
+                <div class="images">
+                    <a href="">
+                        <img src="./asset/img/client_1.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./asset/img/client_2.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./asset/img/client_3.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./asset/img/client_4.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./asset/img/client_5.svg" alt="">
+                    </a>
+                </div>
             </div>
         </div>
         <!-- Guides -->
-        <div class="guides cotent">
-            <h2 class="sub-title">How its works?</h2>
-            <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one place.
-            </p>
-            <!-- List guide -->
-            <ul class="list-guide content">
-                <li class="guide-item">
-                    <img src="./asset/img/buyer.svg" alt="" class="icon">
-                    <h3 class="title">Buyer Guides</h3>
-                    <a href="#!" class="link">
-                        <span>How to buy</span>
-                        <img src="./asset/img/arrow.svg" alt="" class="arrow">
-                    </a>
-                </li>
-                <li class="guide-item">
-                    <img src="./asset/img/rent.svg" alt="" class="icon">
-                    <h3 class="title">Renter Guides</h3>
-                    <a href="#!" class="link">
-                        <span>How to buy</span>
-                        <img src="./asset/img/arrow.svg" alt="" class="arrow">
-                    </a>
-                </li>
-                <li class="guide-item">
-                    <img src="./asset/img/seller.svg" alt="" class="icon">
-                    <h3 class="title">Seller Guides</h3>
-                    <a href="#!" class="link">
-                        <span>How to buy</span>
-                        <img src="./asset/img/arrow.svg" alt="" class="arrow">
-                    </a>
-                </li>
-            </ul>
-            <div class="guide-cta content">
-                <a href="" class="btn">Sell Full Guidelines</a>
+        <div id="services" class="guides">
+            <div class="content">
+                <h2 class="sub-title">How its works?</h2>
+                <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one
+                    place.
+                </p>
+                <!-- List guide -->
+                <ul class="list-guide content">
+                    <li class="guide-item">
+                        <img src="./asset/img/buyer.svg" alt="" class="icon">
+                        <h3 class="title">Buyer Guides</h3>
+                        <a href="#!" class="link">
+                            <span>How to buy</span>
+                            <img src="./asset/img/arrow.svg" alt="" class="arrow">
+                        </a>
+                    </li>
+                    <li class="guide-item">
+                        <img src="./asset/img/rent.svg" alt="" class="icon">
+                        <h3 class="title">Renter Guides</h3>
+                        <a href="#!" class="link">
+                            <span>How to buy</span>
+                            <img src="./asset/img/arrow.svg" alt="" class="arrow">
+                        </a>
+                    </li>
+                    <li class="guide-item">
+                        <img src="./asset/img/seller.svg" alt="" class="icon">
+                        <h3 class="title">Seller Guides</h3>
+                        <a href="#!" class="link">
+                            <span>How to buy</span>
+                            <img src="./asset/img/arrow.svg" alt="" class="arrow">
+                        </a>
+                    </li>
+                </ul>
+                <div class="guide-cta content">
+                    <a href="" class="btn">Sell Full Guidelines</a>
+                </div>
             </div>
         </div>
         <!-- Featured -->
-        <div class="featured">
+        <div id="features" class="featured">
             <div class="content">
                 <header>
                     <h2 class="sub-title">Featured Properties</h2>
@@ -205,7 +232,7 @@
             </div>
         </div>
         <!-- Stats -->
-        <div class="stats">
+        <div id="resourses" class="stats">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
@@ -279,7 +306,7 @@
             </div>
         </div>
         <!-- Subcription -->
-        <div class="subcription">
+        <div id="contact" class="subcription">
             <div class="content">
                 <div class="body">
                     <div class="info">
@@ -292,85 +319,85 @@
                 </div>
             </div>
         </div>
-        <!-- Footer -->
-        <footer class="footer">
-            <div class="content">
-                <div class="row row-top">
-                    <!-- Product-column -->
-                    <div class="column">
-                        <h3 class="heading">Product</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="">Listing</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Property</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Agents</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Blog</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h3 class="heading">Resources</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="">Our Homes</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Member Stories</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Video</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Free trial</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h3 class="heading">Company</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="">Patnerships</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Terms of use</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Privacy</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Sitemap</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h3 class="heading">Get in touch</h3>
-                        <p class="desc">You’ll find your next home, in any style you prefer.</p>
-                        <div class="social">
-                            <a href="" class="social-link">
-                                <img src="./asset/img/facebook.svg" alt="">
-                            </a>
-                            <a href="" class="social-link">
-                                <img src="./asset/img/twitter.svg" alt="">
-                            </a>
-                            <a href="" class="social-link">
-                                <img src="./asset/img/linkin.svg" alt="">
-                            </a>
-                        </div>
-                    </div>
+    </main>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="content">
+            <div class="row row-top">
+                <!-- Product-column -->
+                <div class="column">
+                    <h3 class="heading">Product</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="">Listing</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Property</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Agents</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Blog</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="row row-bottom">
-                    <img src="./asset/img/Logo.svg" alt="" class="logo">
-                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                <div class="column">
+                    <h3 class="heading">Resources</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="">Our Homes</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Member Stories</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Video</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Free trial</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3 class="heading">Company</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="">Patnerships</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Terms of use</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Privacy</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Sitemap</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3 class="heading">Get in touch</h3>
+                    <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                    <div class="social">
+                        <a href="" class="social-link">
+                            <img src="./asset/img/facebook.svg" alt="">
+                        </a>
+                        <a href="" class="social-link">
+                            <img src="./asset/img/twitter.svg" alt="">
+                        </a>
+                        <a href="" class="social-link">
+                            <img src="./asset/img/linkin.svg" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
-        </footer>
-    </main>
+            <div class="row row-bottom">
+                <img src="./asset/img/Logo.svg" alt="" class="logo">
+                <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
