--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                     <img src="./asset/img/Logo.svg" alt="">
                     <!-- Stars -->
                     <div class="stars">
-                        <img src="./asset/img/Vector.svg" alt="">
-                        <img src="./asset/img/Vector.svg" alt="">
-                        <img src="./asset/img/Vector.svg" alt="">
-                        <img src="./asset/img/Vector.svg" alt="">
-                        <img src="./asset/img/Vector.svg" alt="">
+                        <img src="./asset/img/star.svg" alt="">
+                        <img src="./asset/img/star.svg" alt="">
+                        <img src="./asset/img/star.svg" alt="">
+                        <img src="./asset/img/star.svg" alt="">
+                        <img src="./asset/img/star.svg" alt="">
                     </div>
                 </div>
                 <div class="row row-desc">
